--- a/README
+++ b/README
@@ -815,3 +815,4 @@ ERROR_CODE_IS_PAUSED             = 9
 ERROR_CODE_UNEXPECTED_EXC        = 10
 ERROR_CODE_EVALUATION_FAILED     = 11
 ERROR_CODE_PC_NOT_AVAILABLE      = 12
+ERROR_CODE_NO_ACTIVE_FRAME       = 13
