evaluation related fixes extended location tracking host can be set to null while configuring TCP/IP

--- a/README
+++ b/README
@@ -213,6 +213,12 @@ Ok, it means that application has been started in the suspended mode described
 before and is waiting for new connections. It uses the default TCP/IP port, so
 everything that has to be done to connect it is to run jrdb.
 
+First of all type --help parameter in order to get all available arguments:
+
+$ jrdb --help
+
+Then start the client:
+
 > jrdb
 JavaScript Remote Debugger Client connected to a remote debugger.
 Waiting for a list of JavaScript contexts being debugged.
